--- a/adminPortal/src/styles/dashboardStyles.css
+++ b/adminPortal/src/styles/dashboardStyles.css
@@ -1,9 +1,10 @@
 .cards {
-    padding: 1.3rem;
+    
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 2rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .cards-single {
@@ -37,14 +38,13 @@
     color: #fff;
 }
 
-@media only screen and (max-width: 960px) {
-
+@media only screen and (max-width: 1280px) {
     .cards {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1170px) {
     .cards {
         grid-template-columns: repeat(2, 1fr);
     }
