--- a/adminPortal/src/styles/dashboardStyles.css
+++ b/adminPortal/src/styles/dashboardStyles.css
@@ -15,7 +15,18 @@
     border-radius: 4px;
 }
 
-.cards-single h1+span {
+.cards-single a{
+    display: block;
+    color: rgb(87, 87, 87);
+    font-size: 2.3rem;
+    font-weight: 700;
+}
+
+.cards-single a:hover{
+    color: #f4845f;
+}
+
+.cards-single a+span {
     color: rgb(87, 87, 87);
 }
 
@@ -32,7 +43,7 @@
     background-color: #f4845f;
 }
 
-.cards-single:last-child h1,
+.cards-single:last-child a,
 .cards-single:last-child div:first-child span,
 .cards-single:last-child div:last-child span {
     color: #fff;
