Add request documents

--- a/studentPortal/src/styles/new-appointmentStyle.css
+++ b/studentPortal/src/styles/new-appointmentStyle.css
@@ -3,8 +3,8 @@
 }
 .select-menu .select-btn{
     display: flex;
-    height: 55px;
-    background-color: #2a6f97;
+    height: 20px;
+    background-color: #555555;
     color: #fff;
     padding: 20px;
     font-size: 18px;
@@ -16,13 +16,18 @@
     box-shadow: 0 0 5px rgba(0,0,0,0,1);
 }
 
+.select-menu .select-btn:hover{
+    background-color: #f4845f;
+    transition: 300ms;
+}
+
 .select-menu .options{
     display: none;
     position: relative;
-    padding: 20px;
+    padding: 10px;
     margin-top: 10px;
     border-radius: 5px;
-    background: #2a6f97;
+    background: #555555;
     list-style: none;
     color: #fff;
     box-shadow: 0 0 5px rgba(0,0,0,0,1);
@@ -44,16 +49,17 @@
 .options .option{
     transition: 300ms;
     display: flex;
-    height: 55px;
+    height: 40px;
     cursor: pointer;
     padding: 0 16px;
     border-radius: 5px;
     align-items: center;
-    background-color: #2a6f97;
+    background-color: #555555;
 }
 
 .options .option:hover{
-    background-color: #2c7da0;
+    background-color: #f4845f;
+    transition: 300ms;
 }
 
 .option .option-text{
@@ -62,13 +68,24 @@
 }
 
 .col-sm-12 button{
-    background-color: #f25c54 !important;
+    background-color: #555555 !important;
     border: none;
     color: #fff;
     font-size: 18px;
     font-weight: 400;
     border-radius: 5px;
     width: 380px;
+}
+
+.col-sm-12 button:hover{
+    background-color: #f4845f !important;
+    transition: 300ms;
+}
+
+.eml{
+    color: rgb(202, 0, 0);
+    font-size: 24px !important;
+    font-weight: 600;
 }
 
 @media only screen and (max-width: 560px) {
