--- a/studentPortal/redirects/src/appointment-success-sub-style.css
+++ b/studentPortal/redirects/src/appointment-success-sub-style.css
@@ -11,7 +11,7 @@ section {
   position: fixed;
   height: 100%;
   width: 100%;
-  background: #e3f2fd;
+  background-color: #f4845f;
 }
 button {
   font-size: 18px;
@@ -19,12 +19,15 @@ button {
   color: #fff;
   padding: 14px 22px;
   border: none;
-  background: #f25c54;
+  background: #1d1a1a;
   border-radius: 6px;
   cursor: pointer;
+  width: 300px;
+  height: 50px;
 }
 button:hover {
-  background-color: #265df2;
+  background-color: #f79d65;
+  transition: 300ms;
 }
 .modal-box {
   position: fixed;
@@ -45,7 +48,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 380px;
+  max-width: 500px;
   width: 100%;
   padding: 30px 20px;
   border-radius: 24px;
@@ -60,6 +63,7 @@ button:hover {
 }
 .modal-box h2 {
   margin-top: 20px;
+  margin-bottom: 10px;
   font-size: 25px;
   font-weight: 500;
   color: #333;
@@ -77,4 +81,25 @@ button:hover {
   font-size: 14px;
   padding: 6px 12px;
   margin: 0 10px;
+}
+
+@media (max-width: 1200px) {
+  .modal-box {
+    max-width: 600px;
+    transition: 300ms;
+  }
+}
+
+@media (max-width: 850px) {
+  .modal-box {
+    max-width: 500px;
+    transition: 300ms;
+  }
+}
+
+@media (max-width: 530px) {
+  .modal-box {
+    max-width: 390px;
+    transition: 300ms;
+  }
 }
