--- a/studentPortal/src/styles/customStyle.css
+++ b/studentPortal/src/styles/customStyle.css
@@ -1,4 +1,19 @@
+.page-item.active .page-link{
+    background: #333 !important;
+    border-color: #333 !important;
+}
+.form-control{
+    font-size: 15px !important;
+}
+.page-link{
+    color: #333 !important;
+}
+.page-item.active .page-link{
+    color: #fff !important;
+}
+
 .cards {
+    
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
