--- a/adminPortal/src/styles/customStyle.css
+++ b/adminPortal/src/styles/customStyle.css
@@ -63,9 +63,47 @@
     color: #fff;
 }
 
+.editbtn:hover,
+.deletebtn:hover{
+    background: #333 !important;
+}
+
+.studentdeletebtn{
+    background-color: #d00000 !important;
+    color: #fff !important;
+    padding: 10px 20px 10px 20px !important;
+    border-style:none !important;
+    border-radius: 4px !important;
+}
+
+.mdladdbtn,
+.editbtn{
+    background: #0096c7 !important;
+    color: #fff !important; 
+    padding: 10px 30px 10px 30px !important; 
+    border-style:none !important; 
+    border-radius: 4px !important;
+}
+
+.mdladdbtn:hover,
+.addstudentbtn:hover,
+.studentdeletebtn:hover{
+    background: #333 !important;
+    color: #fff !important; 
+}
+
 .yesbtn{
     background: #d00000 !important;
     color: #fff !important; 
+    padding: 10px 40px 10px 40px !important; 
+    border-style:none !important; 
+    border-radius: 4px !important;
+}
+
+.addstudentbtn{
+    background: #f4845f !important;
+    color: #fff !important; 
+    margin-top: 10px !important;
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
     border-radius: 4px !important;
@@ -85,7 +123,7 @@
 .deletebtn{
     background-color: #d00000 !important;
     color: #fff !important;
-    padding: 10px 10px 10px 10px !important;
+    padding: 10px 20px 10px 20px !important;
     border-style:none !important;
     border-radius: 4px !important;
 }
