--- a/adminPortal/src/styles/sanctionsStyle.css
+++ b/adminPortal/src/styles/sanctionsStyle.css
@@ -88,6 +88,46 @@
     font-weight: 600;
 }
 
+.form-select{
+    background-color: #555555 !important;
+    border: none !important;
+    color: #fff !important;
+    font-size: 18px !important;
+    font-weight: 400 !important;
+    border-radius: 5px !important;
+    width: 380px !important;
+    padding: 8px 0px 8px 20px  !important;
+}
+
+.form-select:hover{
+    background-color: #f4845f !important;
+    transition: 300ms;
+}
+
+.form-select .option{
+    transition: 300ms !important;
+    display: flex !important;
+    height: 40px !important;
+    cursor: pointer !important;
+    padding: 0 16px !important;
+    border-radius: 5px !important;
+    align-items: center !important;
+    background-color: #555555 !important;
+}
+
+.form-select .option:hover{
+    background-color: #f4845f !important;
+    transition: 300ms;
+}
+
+.form-select .option{
+    font-size: 18px !important;
+    color: #fff !important;
+}
+
+.sanclbl{
+    font-size: 16px !important;
+}
 @media only screen and (max-width: 560px) {
     .col-sm-12 button,
     .select-menu, .select-btn,
