update (final release tommorow)

--- a/adminPortal/src/styles/customStyle.css
+++ b/adminPortal/src/styles/customStyle.css
@@ -186,7 +186,8 @@
     border-radius: 4px !important;
 }
 
-.mdlclosebtn{
+.mdlclosebtn,
+.btnorange{
     background-color: #f4845f !important; 
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
