--- a/adminPortal/src/styles/counsellingStyle.css
+++ b/adminPortal/src/styles/counsellingStyle.css
@@ -88,6 +88,11 @@
     font-weight: 600;
 }
 
+.suc {
+	color: rgb(0, 173, 14);
+    font-size: 24px !important;
+	font-weight: 600;
+}
 @media only screen and (max-width: 560px) {
     .col-sm-12 button,
     .select-menu, .select-btn,
