--- a/adminPortal/src/styles/customStyle.css
+++ b/adminPortal/src/styles/customStyle.css
@@ -175,7 +175,8 @@
 .unvstudenteditbtn:hover,
 .btnblue:hover,
 .btnred:hover,
-.btngreen:hover{
+.btngreen:hover,
+.btnApprove:hover{
     background: #333 !important;
     color: #fff !important; 
 }
@@ -203,6 +204,14 @@
 .seemorebtn,
 .btngreen{
     background: #38b000 !important;
+    color: #fff !important;
+    padding: 10px 20px 10px 20px !important;
+    border-style:none !important;
+    border-radius: 4px !important;
+}
+
+.btnApprove{
+    background: #457b9d !important;
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
