--- a/adminPortal/src/styles/customStyle.css
+++ b/adminPortal/src/styles/customStyle.css
@@ -88,10 +88,11 @@
     color: #fff;
 }
 
-
+.card{
+    border-radius: 20px !important;
+}
 
 .cards {
-    
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
@@ -104,7 +105,7 @@
     justify-content: space-between;
     background: #fff;
     padding: 2rem;
-    border-radius: 4px;
+    border-radius: 15px;
 }
 
 .cards-single a{
@@ -151,7 +152,7 @@
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdladdbtn,
@@ -164,7 +165,7 @@
     color: #fff !important; 
     padding: 10px 30px 10px 30px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdladdbtn:hover,
@@ -176,6 +177,7 @@
 .btnblue:hover,
 .btnred:hover,
 .btngreen:hover,
+.btnexport:hover,
 .btnApprove:hover{
     background: #333 !important;
     color: #fff !important; 
@@ -186,7 +188,7 @@
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .addstudentbtn{
@@ -195,7 +197,7 @@
     margin-top: 10px !important;
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .yesbtn:hover{
@@ -207,7 +209,15 @@
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
+}
+
+.btnexport{
+    background: #008000 !important;
+    color: #fff !important;
+    padding: 10px 20px 10px 20px !important;
+    border-style:none !important;
+    border-radius: 20px !important;
 }
 
 .btnApprove{
@@ -215,7 +225,7 @@
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .deletebtn,
@@ -224,7 +234,7 @@
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .reSchedule{
@@ -232,7 +242,7 @@
     color: #fff !important;
     padding: 10px 20px 10px 20px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .reSchedule:hover{
@@ -246,7 +256,7 @@
     color: #fff !important;
     padding: 10px 10px 10px 10px !important;
     border-style:none !important;
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .markasdonebtn:hover{
@@ -258,7 +268,7 @@
     background-color: #333 !important; 
     color: #fff !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdlapprovebtn{
@@ -266,7 +276,7 @@
     color: #fff !important; 
     padding: 10px 30px 10px 30px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdlapprovebtn:hover{
@@ -274,7 +284,7 @@
     color: #fff !important; 
     padding: 10px 30px 10px 30px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .btnblue{
@@ -282,7 +292,7 @@
     color: #fff !important; 
     padding: 10px 10px 10px 10px !important;
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .btnblue:hover{
@@ -290,7 +300,7 @@
     color: #fff !important; 
     padding: 10px 10px 10px 10px !important;
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdlclosebtn:hover,
@@ -299,7 +309,7 @@
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdlbtnred{
@@ -307,7 +317,7 @@
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 .mdlbtnred:hover{
@@ -315,7 +325,7 @@
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 .mdlclosebtn,
 .btnorange{
@@ -323,7 +333,7 @@
     color: #fff !important; 
     padding: 10px 40px 10px 40px !important; 
     border-style:none !important; 
-    border-radius: 4px !important;
+    border-radius: 20px !important;
 }
 
 
@@ -366,6 +376,14 @@ dl dd {
 .datetimepicker:hover{
     background-color: #f4845f !important;
     transition: 300ms;
+}
+
+.hyperlnk{
+    color: #f4845f;
+}
+
+.hyperlnk:hover{
+    color: #ff4800;
 }
 
 @media only screen and (max-width: 1170px) {
